--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Technology Tracker - отслеживание изучения технологий" />
-    <title>Technology Tracker</title>
-    <style>
-      /* Показываем загрузку пока приложение не загрузилось */
-      #root:empty::before {
-        content: 'Загрузка...';
-        display: block;
-        text-align: center;
-        padding: 50px;
-        font-size: 18px;
-      }
-      body {
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <title>technology-tracker</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <noscript>
-      <div style="padding: 20px; text-align: center;">
-        <h1>JavaScript отключен</h1>
-        <p>Для работы приложения необходимо включить JavaScript в настройках браузера.</p>
-      </div>
-    </noscript>
   </body>
 </html>
